--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
     "ts-node-dev": "^1.1.8",
+    "typedoc": "^0.22.15",
     "typescript": "4.5.5"
   },
   "dependencies": {
