--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc src/*.ts",
+    "build": "tsc",
     "dev": "ts-node-dev ./src/app.ts",
     "lint": "eslint src/*.ts"
   },
@@ -24,6 +24,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "express-validator": "^6.14.0"
   }
 }
